// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PremiumText should render correctly at market price 1`] = `
<PeachText>
  equal to kyc price
</PeachText>
`;

exports[`PremiumText should render correctly with discount 1`] = `
<PeachText>
  7% under kyc price
</PeachText>
`;

exports[`PremiumText should render correctly with premium 1`] = `
<PeachText>
  7% over kyc price
</PeachText>
`;
